hphp/test/zend/good/tests/classes/abstract_not_declared.php.expectf

Fatal error: Class fail contains an abstract method and must therefore be declared abstract in %s/abstract_not_declared.php on line 3
